--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
   <title>follow_along</title>
 </head>
 <body>
+  <div id="modal"></div>
   <div id="root">not rendered</div>
   <script type="module" src="./App.js"></script>  
   <!-- script above needs to be the bottom one -->
